# RabbitMQ

./: .gitignore  README.md
.github/workflows/: cmake.yml
AMQP-CPP-TCP/: myTcpH.h  test.cpp
AMQP-CPP-TCP/AMQP-CPP/: MyConnectionHandler.h  main.cpp
AmqpSimpleClient/Consumer/: myConsumer.cpp  myConsumer.hpp  test.cpp
AmqpSimpleClient/Publisher/: MyPublisher.cpp  MyPublisher.hpp  test.cpp
Connection/: MyConnectionHandler.h  main.cpp  test.cpp
Headers/: chanalles.h  connection.h  newMain.cpp
Producer/: Producer.cpp  Producer.h  test.cpp
SimpleAmqpClient/: CMakeLists.txt
SimpleAmqpClient/Consumer/: CMakeLists.txt  myConsumer.cpp  myConsumer.hpp
SimpleAmqpClient/Executables/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  testPubAndCons.cpp
SimpleAmqpClient/Publisher/: CMakeLists.txt  MyPublisher.cpp  MyPublisher.hpp
SimpleAmqpClient/src/: AmqpException.cpp  AmqpLibraryException.cpp  AmqpResponseLibraryException.cpp  BadUriException.h  BasicMessage.cpp  BasicMessage.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelImpl.cpp  ChannelImpl.h  ConnectionClosedException.h  ConsumerCancelledException.h  Envelope.cpp  Envelope.h  MessageRejectedException.h  MessageReturnedException.cpp  MessageReturnedException.h  SimpleAmqpClient.h  Table.cpp  Table.h  TableImpl.cpp  TableImpl.h
SimpleAmqpClient/src/SimpleAmqpClient/: AmqpLibraryException.h  AmqpResponseLibraryException.h
